k8s/domains/identity/infra/api/overlays/live/identity-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-api-depl
spec:
  template:
    spec:
      containers:
        - name: identity-api
