k8s/domains/identity/infra/api/overlays/live/identity-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: identity-api-public
spec:
  tls:
    certResolver: le
    domains:
      - main: api.tma.com

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: identity-api-public-docs
spec:
  tls:
    certResolver: le
    domains:
      - main: api.tma.com

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: identity-api-public-jwks
spec:
  tls:
    certResolver: le
    domains:
      - main: api.tma.com
